--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto beatae unde sit ducimus ab veritatis vitae delectus maiores amet, aperiam iste rem, eos officia magni corrupti dolorum, officiis aspernatur sint?</p>
         </article>
         <article>
-            <h2>Curso de JavaScript/h2>
+            <h2>Curso de JavaScript</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptas, voluptate est veniam tempore dicta nobis aliquam repudiandae quibusdam! Officia impedit nulla labore? Nostrum ut temporibus iste praesentium ipsum labore!</p>
         </article>
     </main>
