--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptas, voluptate est veniam tempore dicta nobis aliquam repudiandae quibusdam! Officia impedit nulla labore? Nostrum ut temporibus iste praesentium ipsum labore!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptas, voluptate est veniam tempore dicta nobis aliquam repudiandae quibusdam! Officia impedit nulla labore? Nostrum ut temporibus iste praesentium ipsum laborer!</p>
         </article>
     </main>
 </body>
